--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,7 +11,7 @@ website:
     - icon: github
       menu:
         - text: Source Code
-          url:  https://github.com/crigrants/CRI_bioinformatics_workshop
+          url:  https://github.com/Cancer-Research-Institute/CRI_bioinformatics_workshop
     left:
       - text: "Home"
         file: index.qmd
@@ -19,12 +19,12 @@ website:
         file: course.qmd
       - text: "Schedule"
         file: schedule.qmd
-      - text: "Authors"
+      - text: "Faculty"
         file: authors.qmd
       - text: "Resources"
         file: resources.qmd
-      - text: "Acknowledgements"
-        file: acknowledge.qmd
+      # - text: "Acknowledgements"
+      #   file: acknowledge.qmd
         
   sidebar:
     - title: "Course"
