--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ website:
   title: "CRI Bioinformatics Workshop"
   page-navigation: true
   navbar:
+    logo: img/cri_logo.png
     tools:
     - icon: twitter
       href: https://twitter.com/CancerResearch
@@ -99,7 +100,9 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme: 
+      light: flatly
+      dark: darkly
     css: styles.css
     toc: true
     link-external-icon: true
