--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+    
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install libcurl4-openssl-dev libfontconfig1-dev libfreetype6-dev libpng-dev libx11-dev pandoc
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
