--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,15 @@ jobs:
         uses: r-lib/actions/setup-renv@v2
         with:
           cache-version: 1
+      
+      - name: Additional R Dependencies
+        uses: r-lib/actions/setup-r-dependencies@v2
+          with:
+            packages:
+              any::knitr
+              any::rmarkdown
+              any::downlit
+              any::xml2
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
