--- a/_quarto.yml
+++ b/_quarto.yml
@@ -108,5 +108,5 @@ format:
     toc: true
     link-external-icon: false
     link-external-newwindow: true
-    link-external-filter: '^(?:http:|https:)\/\/www\.cancer\-\research\-\institute\.github\.io\/custom'
+    link-external-filter: '^(?:http:|https:)\/\/www\.cancer-research-institute\.github\.io\/custom'
     
